<resources>
    <string name="app_name">Duel Statistics</string>
    <string name="title_activity_main">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="decks">Decks</string>
    <string name="players">Players</string>
    <string name="matches">Matches</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_decks">Decks</string>
    <string name="title_activity_players">Players</string>
    <string name="title_activity_matches">Matches</string>
    <string name="deck_name">Deck Name</string>
    <string name="flat_done">DONE</string>
    <string name="field_required">Field Required</string>
    <string name="insert_deck">Insert Deck</string>
    <string name="flat_ok">OK</string>
    <string name="flat_cancel">Cancel</string>
    <string name="player_name">Player Name</string>
    <string name="insert_player">Insert Player</string>
    <string name="register">Register</string>
    <string name="name_or_nickname">Name or Nickname</string>
    <string name="title_activity_match_register">Register Match</string>
    <string name="match_register">Match Register</string>
    <string name="title_activity_deck_register">DeckRegisterActivity</string>
    <string name="title_activity_player_register">PlayerRegisterActivity</string>
    <string name="deck_register">Deck Register</string>
    <string name="player_register">Player Register</string>
    <string name="pick_a_image">Pick a Image</string>
    <string name="deck">Deck</string>
    <string name="opponent">Opponent</string>
    <string name="opponent_deck">Opponent Deck</string>
    <string name="winner">Winner</string>
    <string name="profile">Profile</string>
    <string name="player">Player</string>
    <string name="match">Match</string>
    <string name="profile_register">Profile Register</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="select_a_player">Select a player</string>
    <string name="select_a_deck">Select a deck</string>
    <string name="duelist">Duelist</string>
    <string name="match_winner_hint">W</string>
    <string name="match_loser_hint">L</string>
    <string name="vs" translatable="false">VS</string>
    <string name="empty" translatable="false"/>
    <string name="successfully_included">Successfully included</string>
    <string name="info">Info</string>
    <string name="total_matches">Total matches</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="record_already_used">Record already used</string>
    <string name="deck_consult">Deck Consult</string>
    <string name="player_consult">Player Consult</string>
    <string name="more_used_decks">More used decks</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <string name="number_000" translatable="false">000</string>
    <string name="number_00" translatable="false">00</string>
    <string name="number_0" translatable="false">0</string>
    <string name="calculator">Calculator</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="wins_losses">Wins / Losses</string>
    <string name="title_activity_profile_edit" translatable="false">ProfileEditActivity</string>
    <string name="greatest_defeat">Greatest defeats</string>
    <string name="empty_list_hint">There is no record,\nclick the button below to create the first :)</string>
    <string name="empty_home">Register first match to see your statistcs :)</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity</string>
    <string name="percentage">Percentage</string>
    <string name="others">Others</string>
    <string name="total_losses">Total Losses</string>
    <string name="otk">Otk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_wait">Please Wait</string>
    <string name="authenticating">Authenticating</string>
    <string name="registering">Registering</string>
</resources>
