<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/opponent"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLifePlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8000"
                android:textSize="44sp" />

            <TextView
                android:id="@+id/txtLifeOpponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="8000"
                android:textSize="44sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnPlayerAdd"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_margin="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/btnPlayerRemove"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_margin="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_remove" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnOponnentAdd"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_margin="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/btnOponnentRemove"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_margin="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_remove" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textColor="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/btnContentRemove"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_content_backspace" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNumbers"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                style="@style/button_calc"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/btn_2"
                style="@style/button_calc"
                android:text="@string/number_2" />

            <Button
                android:id="@+id/btn_3"
                style="@style/button_calc"
                android:text="@string/number_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                style="@style/button_calc"
                android:text="@string/number_4" />

            <Button
                android:id="@+id/btn_5"
                style="@style/button_calc"
                android:text="@string/number_5" />

            <Button
                android:id="@+id/btn_6"
                style="@style/button_calc"
                android:text="@string/number_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                style="@style/button_calc"
                android:text="@string/number_7" />

            <Button
                android:id="@+id/btn_8"
                style="@style/button_calc"
                android:text="@string/number_8" />

            <Button
                android:id="@+id/btn_9"
                style="@style/button_calc"
                android:text="@string/number_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                style="@style/button_calc"
                android:text="@string/number_0" />

            <Button
                android:id="@+id/btn_00"
                style="@style/button_calc"
                android:text="@string/number_00" />

            <Button
                android:id="@+id/btn_000"
                style="@style/button_calc"
                android:text="@string/number_000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>