<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_width="250dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="8dp"
        android:text="@string/insert_player" />

    <br.com.extractor.ygops.view.widget.CustomTextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:inputType="textCapSentences"/>

    </br.com.extractor.ygops.view.widget.CustomTextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/flat_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="8dp"
            android:textColor="?attr/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnDone"
            android:text="@string/flat_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="?attr/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>