<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.extractor.ygops.view.activity.MatchRegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_secondary"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        card_view:cardCornerRadius="4dp"
        card_view:elevation="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/match_register"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deck"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spnDeck1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/opponent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spnPlayer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/opponent_deck"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spnDeck2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <Switch
                android:id="@+id/swtWinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/winner"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/secondary_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/flat_cancel"
                    android:textColor="?attr/colorAccent" />

                <Button
                    android:id="@+id/btnDone"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/flat_ok"
                    android:textColor="?attr/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
