<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginTop="?attr/actionBarSize"
    card_view:cardCornerRadius="4dp"
    card_view:elevation="4dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/matches"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:id="@+id/txtWinsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:text="@string/wins"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtWins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_toEndOf="@+id/txtWinsLabel"
            android:layout_toRightOf="@+id/txtWinsLabel"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLossesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWinsLabel"
            android:text="@string/losses"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLosses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWinsLabel"
            android:layout_toEndOf="@+id/txtLossesLabel"
            android:layout_toRightOf="@+id/txtLossesLabel"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLossesLabel"
            android:text="@string/total_matches"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLossesLabel"
            android:layout_toEndOf="@+id/txtTotalLabel"
            android:layout_toRightOf="@+id/txtTotalLabel"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

